labels page, api as well as integrating labels in the node pool page
