# internal/handlers/labels/dto.go
@@ -24,3 +24,7 @@ type updateLabelRequest struct {
 	Key   *string `json:"key"`
 	Value *string `json:"value"`
 }
+
+type addLabelToPoolRequest struct {
+	NodePoolIDs []string `json:"node_pool_ids"`
+}
